syntax = "proto3";

package qianxia.IMChat;

option go_package = "IMChat/pb";

import "message.proto";

service ChatService {

    rpc ChatMessage(stream ChatMeg) returns (stream ChatMeg) {}

}

message ChatMeg {
    int32 sender_id = 1;    //  发送者Id
    int32 receiver_id = 2;  // 接收者Id
    int32 message_type = 3; // 消息类型
    string content = 4; // 发送的内容
    SendType send_type = 5; // 发送类型
}